refactor!: make webhook event type an enum
